Fixed the favorite button being overflown off the note container and made libary note containers consistent with homepage and favorites

--- a/source/global.css
+++ b/source/global.css
@@ -16,6 +16,9 @@ vertical-navbar{
 
 #restOfScreen{
     margin-left: 10%;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 select{
