--- a/source/homepage/noteMain.css
+++ b/source/homepage/noteMain.css
@@ -40,12 +40,13 @@ header h2 > a {
   flex-shrink: 1;
   display: flex;     
   align-items: center;
-  /* flex-wrap: wrap; */
-  margin: 0 10vw;
+  flex-wrap: wrap;
+  margin: 0 0 0 10vw;
 
 }
 
 .tags-project span {
+  margin-top: 1vh;
   flex-shrink: 1;
   max-width: 30vw;
   width:fit-content;
